<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.schedule.ScheduleActivity">

    <Button
        android:id="@+id/btnMon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:text="@string/schedule_mon"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnTue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:text="@string/schedule_tue"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnWed"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnMon"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnWed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:text="@string/schedule_wed"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnThu"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnTue"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnThu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:text="@string/schedule_thu"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnFri"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnWed"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFri"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:text="@string/schedule_fri"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnSat"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnThu"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:text="@string/schedule_sat"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnSun"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnFri"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSun"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:text="@string/schedule_sun"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSat"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblSelectedDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/schedule_daybar_verticalPadding"
        android:text="@string/selectedDay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMon" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lstSessions"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSelectedDay"
        tools:listitem="@layout/schedule_activity_item" />

    <TextView
        android:id="@+id/emptyList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_lblEmptyView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>